# crude_engine_2

./: !  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  build.py
dragoninn/: CMakeLists.txt  dragoninn.cc  dragoninn.h  main.cc
editor/: CMakeLists.txt  devgui.cc  devgui.h  editor.c  editor.cc  editor.h  main.cc  main.crude_environment
engine/: CMakeLists.txt  engine.c  engine.cc  engine.h
engine/audio/: audio_components.cc  audio_components.h  audio_config.h  audio_device.cc  audio_device.h  audio_device_resources.cc  audio_device_resources.h  audio_ecs.cc  audio_ecs.h  audio_system.cc  audio_system.h
engine/core/: CMakeLists.txt  algorithms.c  algorithms.h  alias.h  array.c  array.cc  array.h  assert.h  color.cc  color.h  components_serialization.h  core_config.h  ecs.c  ecs.cc  ecs.h  ecs_utils.h  environment.cc  environment.h  file.c  file.cc  file.h  hash_map.c  hash_map.cc  hash_map.h  hashmap.cc  hashmap.h  hashmapstr.cc  hashmapstr.h  log.c  log.cc  log.h  math.cc  math.h  math.inl  memory.c  memory.cc  memory.h  octree.cc  octree.h  platform.h  (+16 more)
engine/develop/: devgui.cc  devgui.h
engine/editor/: editor.cc  editor.h  editor_camera_ecs.cc  editor_camera_ecs.h
engine/engine/: devmenu.cc  devmenu.h  engine_commands_manager.cc  engine_commands_manager.h  environment.cc  environment.h  graphics_thread_manager.cc  graphics_thread_manager.h
engine/graphics/: asynchronous_loader.c  asynchronous_loader.cc  asynchronous_loader.h  asynchronous_loader_manager.c  asynchronous_loader_manager.cc  asynchronous_loader_manager.h  command_buffer.c  command_buffer.cc  command_buffer.h  gpu_crash_tracker.cc  gpu_crash_tracker.h  gpu_device.c  gpu_device.cc  gpu_device.h  gpu_memory.cc  gpu_memory.h  gpu_profiler.cc  gpu_profiler.h  gpu_resources.c  gpu_resources.cc  gpu_resources.h  gpu_resources_loader.cc  gpu_resources_loader.h  graphics_components.c  graphics_components.h  graphics_config.h  graphics_system.c  graphics_system.h  imgui.cc  imgui.h  model_renderer_resources.cc  model_renderer_resources.h  model_renderer_resources_manager.cc  model_renderer_resources_manager.h  render_components.c  render_components.h  render_core.c  render_core.h  render_graph.c  render_graph.cc  (+25 more)
engine/gui/: CMakeLists.txt  blueprint.cc  blueprint.h  blueprint_node_builder.cc  blueprint_node_builder.h  content_browser.cc  content_browser.h  debug.cc  debug.h  devmenu.cc  devmenu.h  editor.cc  editor.h  gpu_visual_profiler.cc  gpu_visual_profiler.h  gui.c  gui.cc  gui.h  hardcoded_icon.cc  hardcoded_icon.h  imgui.cc  imgui.h  log_viewer.cc  log_viewer.h  node_inspector.cc  node_inspector.h  node_tree.cc  node_tree.h  texture_inspector.cc  texture_inspector.h  viewport.cc  viewport.h
engine/physics/: physics.c  physics.cc  physics.h  physics_components.c  physics_components.cc  physics_components.h  physics_config.h  physics_debug_ecs.cc  physics_debug_ecs.h  physics_debug_system.cc  physics_debug_system.h  physics_ecs.cc  physics_ecs.h  physics_intersections.cc  physics_intersections.h  physics_resource.cc  physics_resource.h  physics_resources_manager.cc  physics_resources_manager.h  physics_shapes_manager.cc  physics_shapes_manager.h  physics_system.cc  physics_system.h
engine/platform/: CMakeLists.txt  gui_components.c  gui_components.h  input.c  input.h  input_components.c  input_components.h  platform.cc  platform.h  platform_components.c  platform_components.cc  platform_components.h  platform_resources.cc  platform_resources.h  platform_system.c  platform_system.cc  platform_system.h  sdl_system.c  sdl_system.h  sdl_window.c  sdl_window.h
engine/resources/: gltf_loader.c  gltf_loader.h
engine/scene/: CMakeLists.txt  animations_manager.cc  animations_manager.h  camera.c  camera.h  collisions_resources_manager.cc  collisions_resources_manager.h  components_serialization.cc  components_serialization.h  entity.c  entity.h  free_camera_ecs.cc  free_camera_ecs.h  free_camera_system.c  free_camera_system.cc  free_camera_system.h  node_manager.cc  node_manager.h  scene.c  scene.cc  scene.h  scene_components.c  scene_components.cc  scene_components.h  scene_config.h  scene_debug_components.cc  scene_debug_components.h  scene_debug_ecs.cc  scene_debug_ecs.h  scene_ecs.cc  scene_ecs.h  scene_resources.cc  scene_resources.h  scene_thread_manager.cc  scene_thread_manager.h  scripts_components.c  scripts_components.cc  (+3 more)
example/: CMakeLists.txt  main.c
extlibs/: CMakeLists.txt
game/: CMakeLists.txt  boss_system.cc  boss_system.h  crude_log.txt  devgui.cc  devgui.h  devmenu.cc  devmenu.h  enemy_components.cc  enemy_components.h  enemy_system.cc  enemy_system.h  game.cc  game.h  game_components.cc  game_components.h  game_menu.cc  game_menu.h  health_ecs.cc  health_ecs.h  level_01_components.cc  level_01_components.h  level_01_system.cc  level_01_system.h  level_boss_fight_system.cc  level_boss_fight_system.h  level_cutscene_only_sound_system.cc  level_cutscene_only_sound_system.h  level_mars_ecs.cc  level_mars_ecs.h  level_starting_room_system.cc  level_starting_room_system.h  main.cc  main.crude_environment  maze_level_ecs.cc  maze_level_ecs.h  player_controller_components.cc  player_controller_components.h  player_controller_ecs.cc  player_controller_ecs.h  (+21 more)
launcher/: CMakeLists.txt  launcher.cc  launcher.h  main.cc
shaders/: CMakeLists.txt  compile_shader.cmake  compile_spirv_shader.cmake  compute.glsl  compute.json  compute_technique.json  create_shader_header.cmake  culling.comp  culling.glsl  culling.json  culling_technique.json  ddgi.comp  ddgi.glsl  ddgi.json  debug.frag  debug.glsl  debug.json  debug.vert  debug_line2d.frag  debug_line2d.vert  debug_line3d.frag  debug_line3d.vert  debug_technique.json  deferred.glsl  deferred_meshlet.frag  deferred_meshlet.glsl  deferred_meshlet.json  depth_pyramid.comp  fullscreen.frag  fullscreen.glsl  fullscreen.json  fullscreen.vert  fullscreen_technique.json  imgui.frag  imgui.glsl  imgui.vert  imgui_technique.json  light.frag  luminance_average_calculation.comp  luminance_histogram_generation.comp  (+32 more)
(+240 files in other folders)
